<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ir.ashkaran.season8.E09CustomerProfile">



    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/appbar"
        android:fitsSystemWindows="true"
        android:background="@color/colorWhite"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">



        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimaryDark">



            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/no_image"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"/>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>
        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TableLayout
            android:minHeight="700dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:padding="16dp">
                <TextView android:textStyle="bold"    android:text="@string/CustomerID"/>
                <TextView  android:id="@+id/CustomerID"  android:layout_marginLeft="16dp" android:text="@string/CustomerID"/>
            </TableRow>

            <TableRow
                android:padding="16dp">
                <TextView android:textStyle="bold"    android:text="@string/ContactName"/>
                <TextView  android:id="@+id/ContactName"  android:layout_marginLeft="16dp" android:text="@string/ContactName"/>
            </TableRow>


           <TableRow
               android:padding="16dp">
                <TextView android:textStyle="bold"    android:text="@string/Address"/>
                <TextView  android:id="@+id/Address"  android:layout_marginLeft="16dp" android:text="@string/Address"/>
            </TableRow>

            <TableRow
                android:padding="16dp">
                <TextView android:textStyle="bold"    android:text="@string/City"/>
                <TextView  android:id="@+id/City"  android:layout_marginLeft="16dp" android:text="@string/City"/>
            </TableRow>

             <TableRow
                 android:padding="16dp">
                <TextView android:textStyle="bold"    android:text="@string/PostalCode"/>
                <TextView  android:id="@+id/PostalCode"  android:layout_marginLeft="16dp" android:text="@string/PostalCode"/>
            </TableRow>


              <TableRow
                  android:padding="16dp">
                <TextView android:textStyle="bold"    android:text="@string/Country"/>
                <TextView  android:id="@+id/Country"  android:layout_marginLeft="16dp" android:text="@string/Country"/>
            </TableRow>




        </TableLayout>



    </android.support.v4.widget.NestedScrollView>



    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@+id/appbar"
        app:layout_anchorGravity="bottom|end|right"
        app:srcCompat="@drawable/ic_share_black_24dp"
        android:layout_margin="16dp"/>










</android.support.design.widget.CoordinatorLayout>
